# rigby-toon

./: .gitignore  README.md  pyproject.toml  rigby.py
rigby/: cli.py  core.py
src/rigby/: __init__.py  core.py
src/rigby-toon/: cli.py
tests/: test_cli.py  test_core.py  test_integration.py
