[project]
name = "rigby"
version = "0.1.0"
description = "A python AST parser that extracts code skeletons into TOON format."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Eduardo Rico"}
]
dependencies = []

[project.scripts]
rigby = "rigby.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

